# binaryninja-superh

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: arch.rs  flags.rs  instructions.rs  lib.rs  lifter.rs  registers.rs
testcases/: dc_rom_r0.elf  dc_rom_r1.elf  helloworld  jumptable
