[package]
name = "binaryninja-superh"
version = "0.2.0"
edition = "2021"
authors = ["starfleetcadet75 <starfleetcadet75@gmail.com>"]
description = "SuperH Architecture Support for Binary Ninja"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/starfleetcadet75/binaryninja-superh"

[lib]
name = "arch_superh"
crate-type = ["cdylib"]

[dependencies]
binaryninja = { git = "https://github.com/Vector35/binaryninja-api.git", tag = "v4.2.6455-stable" }
bitflags = "2.6"
log = "0.4"
strum = "0.26"
strum_macros = "0.26"
